# 5740_ai_project

./: .gitignore  .vsgrc  README.md  teroshdl_config.json
doc/: DEVELOPING.md
fpga/: .gitignore  comms_rx.vhd  comms_tx.vhd  core.vhd  create_project.tcl  create_project_old.tcl  custom_utils.vhd  ga_types.vhd  game.vhd  game_types.vhd  kv260_design.tcl  player.vhd  player_funs.vhd  pmod_constraints.xdc  top.vhd  top_1layer.bit.prm  top_3layer.bit.prm  tournament.vhd  xormin32.vhd
fpga/imports/: UART_RX.vhd  UART_TX.vhd  uart_rx.vhd  uart_tx.vhd  xormix32.vhd
fpga/neural_network/: activation.vhd  neuron.vhd
fpga/scripts/: create_project.tcl
fpga/sim/bram_manager/: tb_bram_manager.vhd  test.py  waveform.gtkw
fpga/sim/core/: tb_core.vhd  test.py  waveform.gtkw
fpga/sim/fitness/: tb_fitness.vhd  test.py  waveform.gtkw
fpga/sim/ga/: tb_ga.vhd  test.py  waveform.gtkw
fpga/sim/neuroevolution/: tb_neuroevolution.vhd  test.py  waveform.gtkw
fpga/sim/nn/: tb_nn.vhd  test.py  waveform.gtkw
fpga/sim/tournament/: tb_tournament.vhd  test.py
fpga/sim/victor_copy/: tb_victor_copy.vhd  test.py
fpga/src/: bram_manager.vhd  bram_types.vhd  comms_rx.vhd  comms_tx.vhd  core.vhd  custom_utils.vhd  fitness.vhd  ga.vhd  ga_types.vhd  game.vhd  game_types.vhd  ne_types.vhd  neuroevolution.vhd  playagame.vhd  player_funs.vhd  top.vhd  tournament.vhd  victor_copy.vhd
fpga/src/imports/: bram_sdp.vhd  fifo.vhd  uart_tx.vhd  xormix32.vhd
fpga/src/neural_network/: activation.vhd  decoder.vhd  decoder_funs.vhd  mutate_funs.vhd  mux2to1.vhd  neuron.vhd  neuron2.vhd  neuron3.vhd  neuron_noreg.vhd  nn.vhd  nn_top.vhd  nn_top2.vhd  nn_types.vhd  nn_unit.vhd  notes.txt  onehotdecoder.vhd  register.vhd  special_types_pkg.vhd  types.vhd
fpga/tb/: UART_TB.vhd  neuron_tb.vhd  uart_tb.vhd
fpga/temp_files/: tb_fitness.vhd
fpga/test/: game_test.vhd
fpga/verilator_tops/: game_test.vhd
ga_testing/: genetic_algorithm.cpp  genetic_algorithm.h  main.cpp
sim/: CMakeLists.txt  to_verilog.sh
sim/VHDL/: Generic_MUX.vhd  OneHotDecoder.vhd
sim/resources/: jnb_map2.tmx  jnb_map_simple.tmx  jnb_map_tb.tmx  tiles.psd
sim/src/: binary_neural_net.h  core.cpp  core.h  core_render.cpp  core_render.h  fixed_point.h  interfaces.h  main.cpp  main_sim.cpp  neural_net.h  parse_map.h  pixel_game.cpp
sim/src/models/: human.cpp  human.h  mlp_binary.cpp  mlp_binary.h  mlp_map_lut.cpp  mlp_map_lut.h  mlp_simple.cpp  mlp_simple.h  mlp_tri.cpp  mlp_tri.h
sim/src/optimizers/: optimizers.h  selection.cpp  selection.h  simple.cpp  simple.h
software/: CMakeLists.txt  CMakePresets.json  to_verilog.sh  verilate.sh
software/crossover_dev/: README.md  crossover.cpp
software/resources/: imgui.ini  jnb.tiled-session  jnb_map1.tmx  jnb_map_simplest.tmx  jnb_map_tb.tmx  jnb_map_underwater.tmx  jnb_tileset.tsx
software/src/: comms.cpp  comms.h  core_render.cpp  core_render.h  interfaces.h  main.cpp  main_sim.cpp  model.h  neural_net.h  observation_types.h  pixel_game.cpp  pixel_game.h  pl_nn.cpp  pl_nn.h  play.cpp  play.h  rendering.cpp  rendering.h  training.cpp  training.h
software/src/games/: game.h  jnb.cpp  jnb.h  jnb_render.cpp  jnb_render.h
software/src/models/: human.cpp  human.h  mlp_map_lut.cpp  mlp_map_lut.h  mlp_simple.cpp  mlp_simple.h  model.h  pl_nn_model.cpp  pl_nn_model.h
software/src/optimizers/: ga.cpp  ga.h  ga_funs.cpp  ga_funs.h  simple.cpp  simple.h
vhdl/neural-network-vhdl/: README.md
vhdl/neural-network-vhdl/scripts/: simulation.do
vhdl/neural-network-vhdl/src/: Mux2to1.vhdl  NN.vhdl  register.vhdl
vhdl/neural-network-vhdl/src/testbench/: NN_tb.vhdl
